# AgentOS

./: .gitignore  .gitmodules  CMakeLists.txt  NeuralOS_reference.md  README.md  folder-structure.md  hardware.md  optimized-dev-plan.md  setup_neural_os.sh
agents/: builder.yaml  hello.yaml  sysmonitor.yaml
docs/: architecture.md  article-draft.md  nos-server.md  whitepaper-draft.md
src/agent/: CMakeLists.txt  agent.cpp  agent.h  agent_config.cpp  agent_config.h  agent_memory.cpp  agent_memory.h  agent_run.cpp  llm_client.cpp  llm_client.h
src/agentos-cli/: CMakeLists.txt  main.cpp
src/agentos-server/: CMakeLists.txt  main.cpp
src/agentos-server/tools/: exec.cpp  process.cpp  script_tools.cpp  script_tools.h  tools.h
src/agentos-supervisor/: CMakeLists.txt  builder_main.cpp  main.cpp  supervisor.cpp  supervisor.h
src/agentos-telegram/: CMakeLists.txt  main.cpp
src/aos-cli/: CMakeLists.txt  main.cpp
src/aos-server/: CMakeLists.txt  main.cpp
src/aos-server/tools/: exec.cpp  network.cpp  tools.h
src/aos-supervisor/: CMakeLists.txt  builder_main.cpp  main.cpp  supervisor.cpp  supervisor.h
src/nos-cli/: CMakeLists.txt  main.cpp
src/nos-server/: CMakeLists.txt  main.cpp
src/nos-server/tools/: exec.cpp  filesystem.cpp  journal.cpp  network.cpp  process.cpp  sysinfo.cpp  tools.h
src/nos-supervisor/: CMakeLists.txt  builder_main.cpp  main.cpp  supervisor.cpp  supervisor.h
tests/: test_agentos_server.sh  test_agentos_supervisor.sh  test_aos_server.sh  test_aos_supervisor.sh  test_nos_server.sh  test_nos_supervisor.sh
